<resources>
    <string name="app_name">TP_Mobiles</string>
    <string name="hello_linearlayout">Hello, LinearLayout!</string>
    <string name="sub">Sub</string>
    <string name="add">Add</string>
    <string name="pop">Show Popup</string>
    <string name="snack">Show Snack</string>
    <string name="activityOne">Open Activity One</string>
    <string name="textActivityOne">My First Activity</string>
    <string name="activityTwo">Open Activity Two</string>
    <string name="textActivityTwo">My Second Activity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_0">0</string>
</resources>