<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/messageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:text="@string/textActivityTwo"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        />

    <LinearLayout
        android:id="@+id/ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="20dip"
        >
        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:onClick="onClickYes"
            />
        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/no"
            android:onClick="onClickNo"
            />

    </LinearLayout>

</LinearLayout>